@@ -182,7 +182,9 @@
           <tal:start replace="slot/start" />
           <tal:bookable condition="bookable">
             <a href=""
-              tal:attributes="href link/url"
+               title="Foreseen booking time"
+               tal:attributes="href link/url;
+                               title python:week_view.get_foreseen_booking_time(day, slot)"
               >+</a>
           </tal:bookable>
           <div class="busy_slot"></div>
