@@ -142,10 +142,10 @@ i18n:domain="rg.prenotazioni">
                               i18n:attributes="summary">
                               <thead>
                                 <tr>
-                                  <th i18n:translate="label_fullname">Name</th>
+                                  <th i18n:translate="label_fullname">Fullname</th>
                                   <th i18n:translate="label_gate">Gate</th>
-                                  <th i18n:translate="reservation_date">Date</th>
-                                  <th i18n:translate="label_start_time">Time</th>
+                                  <th i18n:translate="reservation_date">Reservation date</th>
+                                  <th i18n:translate="label_start_time">Start time</th>
                                 </tr>
                               </thead>
                               <tbody>
